--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -7,7 +7,7 @@ description: ''
 
 By minimalistic, we mean that it contains only the bare minimum needed for a complex system. Besides the form elements, there aren’t any classical components (there will be components, but we will manage them under Spruce UI, under a sister project) in it. Although it seems small, it isn’t.
 
-<Notification type="info">Please, note that we are considering Spruce beta until the 1.0 release. <strong>At this point, a lot of things missing, could and will change.</strong> We plan to release the first major version in the next 3-6 months.</Notification>
+<Notification type="info">Please, note that we are considering Spruce beta until the 1.0 release. <strong>At this point, a lot of things are missing, could and will change.</strong> We plan to release the first major version in the next 3-6 months.</Notification>
 
 ## Why Make Another CSS Framework?
 
@@ -22,11 +22,11 @@ We are sure everybody uses a CSS system; it can be a complete framework or a set
 - It wants to be modern. Defining modern is challenging in a constantly changing environment, but the essence here is to follow the new things in CSS.
 - It wants to separate the basic framework from a UI or component library. For UI, we plan to do a separate project named Spruce UI.
 - It wants to be semantic and follow accessibility best practices where possible.
-- It wants to do less (we will see that it actually happens).
+- It wants to do less (we will see if it actually happens).
 
-## What Spruce Don’t Wants to Be?
+## What Spruce Doesn’t Want to Be?
 
-- We don’t want to compete or compered with other CSS frameworks. We think almost all of them are great - we learn(ed) a lot from them.
+- We don’t want to compete or compered with other CSS frameworks. We think almost all of them are great - we learn(t) a lot from them.
 - Although it has some design opinion, it is not something to help you design. The goal is to give you the correct patterns and a small system; the UI is your job.
 - Spruce is just a tool. It can help you, but alone it can’t make your code better. You have to do your homework.
 
