--- a/src/docs/elements/tables.mdx
+++ b/src/docs/elements/tables.mdx
@@ -58,7 +58,7 @@ Use the ```table``` class on an HTML ```<table>``` element to use the default st
 </table>
 ```
 
-<Notification>Use <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/th#attr-scope">scope attribute</a> to define which header relates with which table cells.</Notification>
+<Notification type="correct">Use <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/th#attr-scope">scope attribute</a> to define which header relates with which table cells.</Notification>
 
 ## Striped and Hover Styles
 
