--- a/src/docs/getting-started/installation.mdx
+++ b/src/docs/getting-started/installation.mdx
@@ -51,6 +51,6 @@ If you don’t want to use namespacing, you have to import like the following:
 
 Although the namespacing doesn’t necessary for a simple project, we will show you the examples this way because we like the idea and think it is more future proof.
 
-<Notification type="info">The tilde ~ character means the node_modules folder in a Webpack configuration, so you don’t have to use a relative path.</Notification>
+<Notification type="info">The tilde <code>~</code> character means the <code>node_modules</code> folder in a Webpack configuration, so you don’t have to use a relative path.</Notification>
 
 If you need a [simple Sass compile setup](https://pineco.de/the-simplest-sass-compile-setup/), check out our article on Pine.
