--- a/src/docs/getting-started/installation.mdx
+++ b/src/docs/getting-started/installation.mdx
@@ -6,13 +6,13 @@ title: 'Installation'
 
 ## Install with NPM
 
-```
+```bash
 npm install sprucecss --save
 ```
 
 ## Install with Yarn
 
-```
+```bash
 yarn add sprucecss
 ```
 
