Update manual install

--- a/src/docs/getting-started/installation.mdx
+++ b/src/docs/getting-started/installation.mdx
@@ -21,8 +21,8 @@ yarn add sprucecss
 [Download the latest release](https://github.com/conedevelopment/sprucecss/archive/refs/heads/main.zip), find the dist folder at the root (where are the compiled files), and use the preferred CSS file (minified, regular).
 
 ```html
-<link href="sprucecss.min.css" rel="stylesheet">
-<link href="sprucecss.css" rel="stylesheet">
+<link href="spruce.min.css" rel="stylesheet">
+<link href="spruce.css" rel="stylesheet">
 ```
 
 ## Import It With @use
