Fix form variables heading level

--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -190,7 +190,7 @@ $inline-text-element-padding: 0.1em 0.3em;
 $inline-text-element-border-radius: $border-radius-sm;
 ```
 
-### Forms
+## Forms
 
 ```scss
 $form-label-font-size: null;
