Separate button variables from form and add $btn-font-family

--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -190,23 +190,28 @@ $inline-text-element-padding: 0.1em 0.3em;
 $inline-text-element-border-radius: $border-radius-sm;
 ```
 
-## Forms
+## Buttons
 
 ```scss
-$form-label-font-size: null;
-$form-label-font-style: null;
-$form-label-font-weight: null;
-
 $btn-border-radius: $border-radius-sm;
 $btn-font-size: $font-size-base;
 $btn-font-size-sm: 0.8rem;
 $btn-font-size-lg: 1.15rem;
+$btn-font-family: null;
 $btn-font-style: null;
 $btn-font-weight: 500;
 $btn-padding: 0.75em 1em;
 $btn-padding-sm: 0.5em;
 $btn-padding-lg: 0.9em 1.15em;
 $btn-icon-size: 0.85em;
+```
+
+## Forms
+
+```scss
+$form-label-font-size: null;
+$form-label-font-style: null;
+$form-label-font-weight: null;
 
 $legend-font-size: clamp(#{map.get($font-sizes, 'h5')}, 5vw, #{map.get($font-sizes, 'h4')});
 $legend-font-weight: 700;
