Add $heading-font-weight to typography

--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -180,6 +180,8 @@ $font-family-base: #{system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Ne
 $font-family-heading: $font-family-base;
 $font-family-cursive: #{SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace};
 
+$heading-font-weight: 700;
+
 $line-height-sm: 1.2;
 $line-height-md: 1.5;
 $line-height-lg: 1.8;
