Update btn-variant() mixin to fourth color

--- a/src/docs/sass/mixins.mdx
+++ b/src/docs/sass/mixins.mdx
@@ -98,8 +98,9 @@ Declare the colors of the button. The mixin will search for the keys under the b
   $colors: (
     btn: (
       custom-background: hsl(0, 0%, 95%),
-      custom-background-hover: hsl(0, 0%, 90%),
+      custom-background-hover: hsl(0, 0%, 80%),
       custom-foreground: hsl(0, 0%, 10%),
+      custom-foreground-hover: hsl(0, 0%, 10%),
     )
   )
 );
