--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -212,17 +212,25 @@ $inline-text-element-border-radius: $border-radius-sm;
 ## Buttons
 
 ```scss
-$btn-border-radius: $border-radius-sm;
-$btn-font-size: $font-size-base;
-$btn-font-size-sm: 0.8rem;
-$btn-font-size-lg: 1.15rem;
-$btn-font-family: null;
-$btn-font-style: null;
-$btn-font-weight: 500;
-$btn-padding: 0.75em 1em;
-$btn-padding-sm: 0.5em;
-$btn-padding-lg: 0.9em 1.15em;
-$btn-icon-size: 0.85em;
+$btn-border-radius: $border-radius-sm !default;
+
+$btn-font-size: $font-size-base !default;
+$btn-font-size-sm: 0.8rem !default;
+$btn-font-size-lg: 1.15rem !default;
+
+$btn-font-family: null !default;
+$btn-font-style: null !default;
+$btn-font-weight: 500 !default;
+
+$btn-icon-padding: 0.75em !default;
+$btn-icon-padding-sm: 0.5em !default;
+$btn-icon-padding-lg: 0.9em !default;
+
+$btn-padding: 0.75em 1em !default;
+$btn-padding-sm: 0.5em !default;
+$btn-padding-lg: 0.9em 1.15em !default;
+
+$btn-icon-size: 1em !default;
 ```
 
 ## Forms
