Expand $settings map

--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -63,6 +63,7 @@ You can access any setting with the [setting() helper function](/docs/sass/funct
 ```scss
 $settings:(
   hyphens:  true, // Turn on/off the hyphenation
+  color-fallback: false // Turn on/off the fallback color when using spruce.color() function
 );
 ```
 
